--- a/css/style.css
+++ b/css/style.css
@@ -1079,7 +1079,7 @@ div.apparel .scroll-space:nth-child(2) img {
 
 div.apparel .scroll-space,
 div.print .scroll-space {
-	position: relative;
+	position: absolute;
 	overflow-y: scroll;
 	overflow-x: hidden;
 }
