--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ div.location h3 {
 div.address {
 	font-family : 'myriad-pro', 'Myriad Pro', Myriad, sans-serif;
 	float: left;
-	margin-right: 60px;
+	margin-right: 10%;
 	font-size: 16px;
 }
 
