--- a/css/style.css
+++ b/css/style.css
@@ -214,7 +214,7 @@ div.panel.location {
 
 div.panel-container,
 nav.header {
-	width: 100%;
+	width: 90%;
 	margin: 0 auto;
 	overflow: auto;
 	max-width: 1440px;
@@ -227,7 +227,6 @@ body.home #panel-2 .panel-container {
 
 nav.header {
 	margin: 2em auto 0;
-	width: 90%;
 }
 
 nav.header ul {
@@ -382,6 +381,7 @@ div.third-row {
 
 div.full-width {
 	max-width: none;
+	width: 100%
 }
 
 body.home #panel-3 .panel-container,
