--- a/css/style.css
+++ b/css/style.css
@@ -1084,8 +1084,7 @@ div.apparel .scroll-space:nth-child(2) img {
 div.apparel .scroll-space,
 div.print .scroll-space {
 	position: absolute;
-	overflow-y: scroll;
-	overflow-x: hidden;
+	overflow: hidden;;
 }
 
 div.apparel p.scroll {
