--- a/css/style.css
+++ b/css/style.css
@@ -1079,6 +1079,7 @@ div.apparel .scroll-space img {
 
 div.apparel .scroll-space:nth-child(2) img {
 	margin-left: 0;
+	margin-bottom: 33%;
 }
 
 div.apparel .scroll-space,
