A couple things.  First pass at commit to master - should go to live site, not dev.  Second, first pass at removing all /dev/ references.  Finally, changes hidden message for contact form styling.  Need to port to dev branch

--- a/css/style.css
+++ b/css/style.css
@@ -136,7 +136,11 @@ div.address a.add {
 }
 
 div.hidden-message {
-	display: none
+	display: none;
+	font-family: "Didot W02 Italic";
+	text-transform: none;
+	letter-spacing: 0;
+	font-size: 18px;
 }
 
 #contact-form input {
