--- a/css/responsive.css
+++ b/css/responsive.css
@@ -54,6 +54,15 @@
 		font-size: 50px;
 	}
 
+	.panel-container.desktop-panel {
+		margin-top: 75px;
+	}
+
+	div.bio.nth-of-type(1) img {
+		max-height: 96%;
+	}
+
+
 }
 
 /* ---------- 1080p HD Screen ---------- */
